<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nostalgia</string>

    <string name="welcome">Welcome!</string>

    <string name="NDopen">open</string>
    <string name="NDclose">close</string>
    <string name="search">Search</string>
    <string name="memory_search_hint">Search memory</string>
    <string name="all">All Events</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d memory</item>
        <item quantity="other">%1$d memories</item>
    </plurals>

    <string name="memory_title_hint">Give a name to this souvenir!</string>
    <string name="memory_title_label">Title</string>
    <string name="memory_details_label">Details</string>
    <string name="Delete">Delete</string>
    <string name="no_memorys_display">There are no memories to display</string>
    <string name="no_memory_add">Add a memory?</string>
    <string name="memory_photo_button_description">Take photo of memory scene</string>
    <string name="memory_photo_no_image_description">memory scene photo (not set)</string>
    <string name="memory_details_hint">Describe your recollection in detail</string>
    <string name="choose_photos">Choose Photos/Videos</string>
    <string name="photo_add">Add photo</string>
    <string name="photos_reselection">Re-select Photos</string>
    <string name="delete_memory">Discard Memory</string>
    <string name="delete_memory_confirm">You did not set a title or chosen any photos.
        Do you want to discard this memory?</string>
    <string name="share_warning">No photos/videos attached!</string>
    <string name="emptyfilter">No memory found!</string>
    <string name="no_title_set">(No Title set)</string>
    <string name="no_details_set">(No details set)</string>


    <string name="settings">Settings</string>

    <string name="delete_file">Delete File</string>
    <string name="deletion_confirm">Do you want to delete the selected files?</string>
    <string name="discard_event">Discard Event</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="discard_event_confirm">Do you want to discard this event?</string>

    <string name="personal_settings">Personal Settings</string>
    <string name="themes">Themes</string>
    <string name="themes_summary">Change app theme</string>
    <string name="settings_name">Name</string>
    <string name="settings_name_summary">Change your name</string>
    <string name="settings_events">Events</string>
    <string name="settings_events_summary">Tap on an event to delete it. Click Add to add a customized event</string>
    <string name="settings_aboutme">About me</string>
    <string name="settings_aboutme_summary">"View my source code and my developers profile"</string>
    <string name="settings_feedback">Send Feedback</string>
    <string name="settings_feedback_summary">Report an issue or suggest a new feature</string>
    <string name="settings_invite">Invite someone</string>
    <string name="settings_invite_summary">Have collective memories with someone?
        Invite them and they can reminisce about them!</string>

    <string name="student_life">Student Life</string>
    <string name="home">Home Sweet Home!</string>
    <string name="hangouts">Hangout and chill</string>
    <string name="celebrations">Celebrations</string>
    <string name="add_event">Add Event</string>
    <string name="language">Language</string>
    <string name="language_summary">Change app language</string>
    <string name="invite_someone">Check this out! You can store and share your favoutite memories in one place!
        I recommend it to you!</string>
    <string name="refreshPage">Click Refresh to see changes</string>
    <string name="refreshButton">Refresh</string>
    <string name="new_custom_event">New Custom Event</string>
    <string name="create">Create</string>
    <string name="share">Share</string>
    <string name="email_adress">Email Address:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="enter_name">Your name</string>
    <string name="password_reenter">Re-enter Password</string>
    <string name="sign_up">Sign Up !</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_summary">Signing out will take you to the login page.</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_summary">Deleting account will delete your files as well</string>
    <string name="delete">Delete</string>
    <string name="delete_account_confirm">Confirm</string>
    <string name="sign_out_confirm">Confirm: Do you want to sign out? Unsaved memories will be lost.</string>
    <string name="save_and_confirm">Save and Sign out</string>
    <string name="email_address_hint">Re-enter your email address</string>
    <string name="password_hint">Re-enter your password</string>
    <string name="new_custom_event_hint">New Event:</string>
    <string name="cardview_extratext">+ %d</string>
    <string name="save_profile">Save to profile</string>
    <string name="signout">Sign Out</string>
    <string name="note_developer">Note from Developer</string>
    <string name="minute_please">A minute please!</string>
    <string name="lengthy_note_developer">"Keeping privacy in mind, this app does not store your photos/videos anywhere but only shows it to you from your phone/tablet. This means you will not need an internet connection to use this app but most importantly, your data is safe with you and is entirely invisible to anyone else, including Android(Google).\n
        However, this comes with a downside that if you move/delete your media, you cannot access them from this app as well. Apart from this, have a happy time here!"</string>
    <string name="storage_permission_necessary">Storage permission necessary</string>
    <string name="please_grant_storage">In order to load your images and videos of previous memories, please grant storage permissions</string>
    <string name="delete_memories">Delete memories</string>
    <string name="deletion_memories_confirm">Do you want to delete the selected memories</string>

</resources>