<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/layout_border"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textColor="@color/light_purple"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:backgroundTint="@color/grey"
        android:hint="@string/email_adress"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_margin="20dp"
        android:padding="20dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/grey"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layout_margin="20dp"
            android:padding="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <EditText
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:backgroundTint="@color/grey"
        android:hint="@string/enter_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:inputType="text" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/login_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/light_purple"
            android:background="@android:color/transparent"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"/>
        <Button
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@+id/login_forgot"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:textColor="@color/light_purple"/>
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/light_purple"
        android:layout_margin="20dp"
        android:padding="20dp"/>

</LinearLayout>