<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false">

     <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:text="@string/memory_title_label"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/memory_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Title"
                android:background="@drawable/button_border"
                android:backgroundTint="@color/grey"
                android:hint="@string/memory_title_hint"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memory_details_label"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/memory_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Title"
                android:background="@drawable/button_border"
                android:backgroundTint="@color/grey"
                android:hint="@string/memory_details_hint"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:inputType="textMultiLine"
                android:maxLines="6"/>
        </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/memory_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_border"
            android:drawableLeft="@drawable/baseline_date_range_white_20"
            android:elevation="5dp"
            android:padding="2dp"
            android:textSize="10sp" />

        <Button
            android:id="@+id/memory_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_border"
            android:drawableLeft="@drawable/baseline_time_white_20"
            android:elevation="5dp"
            android:padding="2dp"
            android:textSize="10sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/memory_selectphotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_border"
            android:contentDescription="@string/memory_photo_button_description"
            android:drawableStart="@android:drawable/ic_menu_camera"
            android:elevation="5dp"
            android:padding="2dp"
            android:text="@string/choose_photos"
            android:textSize="10sp" />

        <Spinner
            android:id="@+id/memory_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_border"
            android:dropDownWidth="match_parent"
            android:padding="2dp"
            android:elevation="5dp"
            android:spinnerMode="dropdown" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photoGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/photo_fab"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="8dp"
                app:icon="@drawable/ic_menu_add"
                android:background="@drawable/button_border"
                android:text="@string/add_on"
                android:contentDescription="@string/photo_add"
                android:elevation="20dp"/>
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/upload_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="8dp"
                app:icon="@drawable/ic_menu_add"
                android:background="@drawable/button_border"
                android:text="@string/upload"
                android:contentDescription="@string/photo_add"
                android:elevation="20dp"/>
        </RelativeLayout>

    </FrameLayout>

</LinearLayout>


